Edited ReportPage.css, fixed alignment

--- a/IzvorniKod/src/pages/MapPage/MapPage.css
+++ b/IzvorniKod/src/pages/MapPage/MapPage.css
@@ -1,5 +1,5 @@
 
-.page-container {
+.map-page-container {
     display: flex;
     flex-direction: column;
     height: 100vh; 
@@ -25,7 +25,7 @@
   }
   
   
-  .content-container {
+  .map-content-container {
     display: flex;
     flex: 1;
     justify-content: space-between;
@@ -47,7 +47,7 @@
     width: 100%;
   }
   
-  .sidebar {
+  .map-sidebar {
     flex: 1; /* Sidebar zauzima 25% širine */
     background-color: #f8f8f8;
     padding: 1rem 1.25rem;
@@ -75,7 +75,7 @@
     background-color: #d6d6d6;
   }
   
-  .sidebar h3 {
+  .map-sidebar h3 {
     margin-bottom: 0.9375rem; 
     font-size: 1rem;
     color: #333;
@@ -83,7 +83,7 @@
   
 
   @media (max-width: 48rem) { 
-    .content-container {
+    .map-content-container {
       flex-direction: column; 
       padding: 0.625rem; 
       height: auto; 
@@ -93,7 +93,7 @@
       margin-bottom: 1.25rem; 
     }
   
-    .sidebar {
+    .map-sidebar {
       width: 95%; 
       margin-top: 1.25rem;
     }
